# sk-langchain-samples

./: LICENSE  README.md  pyproject.toml
langchain/: 1_simple_model_invoke.py  1b_simple_chain.py  2_manual_tool_calling.py  2_tool_calling.py  3_automatic_tool_calling.py  3_rag_example.py  4_multi_agent.py  4_simple_vector_demo.py  5_multi_agent.py  5_simple_embeddings_demo.py  6_multi_agent.py  6a_mcp_client.py  6b_mcp_server_math.py  6c_mcp_server_weather.py
semantickernel/: 1_simple_model_invoke.py  2_tool_calling.py  3_simple_vector_demo.py  4_openapi_tools.py  5_simple_embeddings_demo.py  6_simple_embeddings_demo.py
