[project]
name = "sk-langchain-samples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.19",
    "langgraph>=0.2.62",
    "langgraph-supervisor>=0.0.27",
    "numpy>=2.2.6",
    "pydantic>=2.0.0",
    "scipy>=1.15.0",
    "semantic-kernel>=1.32.1",
]
